# glfw_note

./: .gitignore  CMakeLists.txt  glad.c  readme.md  run.sh  splitview.c
